Ajuste nome aplicação

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">KJogoVelha</string>
     <string name="restart">Reiniciar</string>
 
-    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_splash">KJogoVelha</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">Jogo da Velha</string>
     <string name="draw_message">Que pena! Ninguém ganhou.</string>
